# aws_bootcamp_aula02

./: README.md  main.py  main_v2.py  pyproject.toml
