[tool.poetry]
name = "aws-bootcamp-aula02"
version = "0.1.0"
description = ""
authors = ["Gustavo Botelho Vieira <gu-botelho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
